# ChangeLog for dev-python/stevedore
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/stevedore/ChangeLog,v 1.27 2015/03/25 18:43:56 prometheanfire Exp $

*stevedore-1.3.0 (25 Mar 2015)

  25 Mar 2015; Matthew Thode <prometheanfire@gentoo.org>
  +stevedore-1.3.0.ebuild:
  bup

  08 Mar 2015; Pacho Ramos <pacho@gentoo.org> stevedore-1.1.0.ebuild:
  x86 stable, bug 540290

  06 Mar 2015; Pacho Ramos <pacho@gentoo.org> stevedore-1.1.0.ebuild:
  amd64 stable, bug 540290

  09 Feb 2015; Tim Harder <radhermit@gentoo.org> stevedore-1.1.0.ebuild:
  Add pypi site to HOMEPAGE.

*stevedore-1.1.0 (18 Nov 2014)

  18 Nov 2014; Matthew Thode <prometheanfire@gentoo.org>
  +stevedore-1.1.0.ebuild:
  bup

  26 Oct 2014; Mike Gilbert <floppym@gentoo.org> stevedore-1.0.0.ebuild:
  Unpin dev-python/pillow.

  28 Sep 2014; Alex Brandt <alunduil@gentoo.org> -stevedore-0.14.1.ebuild:
  prune version 0.14.1 (keep three versions)

*stevedore-1.0.0 (26 Sep 2014)

  26 Sep 2014; Alex Brandt <alunduil@gentoo.org> +stevedore-1.0.0.ebuild,
  metadata.xml:
  bump version and add python3* targets

  06 Jul 2014; Michał Górny <mgorny@gentoo.org> stevedore-0.14.1.ebuild,
  stevedore-0.15-r1.ebuild, stevedore-0.15.ebuild:
  Clean up obsolete dependencies on virtual/python-argparse and virtual/python-
  unittest2 (those packages were only required for <=python-2.6).

*stevedore-0.15-r1 (12 Jun 2014)

  12 Jun 2014; Patrick Lauer <patrick@gentoo.org> +stevedore-0.15-r1.ebuild:
  Add py34

  01 Apr 2014; Ian Delaney <idella4@gentoo.org> stevedore-0.15.ebuild:
  re-add flake8 for test phase

  30 Mar 2014; Ian Delaney <idella4@gentoo.org> -stevedore-0.10.ebuild,
  -stevedore-0.11.ebuild, -stevedore-0.12.ebuild, stevedore-0.14.1.ebuild,
  stevedore-0.15.ebuild:
  Drop pypy2_0 support due to lack of its support in pbr, update deps, drop old

*stevedore-0.15 (30 Mar 2014)
